Closed
Bug 211031
Opened 22 years ago
Closed 22 years ago
Mail with only BCCs cannot be sent "Later" (also saves corrupt draft)
Categories
(MailNews Core :: Composition, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.5beta
People
(Reporter: richi.mozilla, Assigned: mscott)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
948 bytes,
patch
|
Bienvenu
:
superreview+
asa
:
approval1.5b+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4) Gecko/20030624
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4) Gecko/20030624
If I compose a message with only BCC reipients, and keep it in "Unsent Messages"
(i.e. File|SendLater), the message will not send, because the header gets
corrupted with a bogus "undisclosed-recipients". The same is true if I save it
as draft.
Reproducible: Always
Steps to Reproduce:
1. Compose mail with only BCC recipient(s)
2. File|SendLater
3. File|SendUnsentMessages
Actual Results:
SMTP server complains "4.1.1 user unknown" (presumably due to corrupted header
causing bogus RCPT TO). If you then look in Unsent Messages, you can see a bogus
TO recipient.
Expected Results:
Header should not be corrupted by bogus recipients. Send Later function should
work as advertised.
This used to work OK in 1.2 and previous builds.
Related to bug#189263.
| Reporter | ||
Updated•22 years ago
|
Flags: blocking1.4?
Comment 1•22 years ago
|
||
confirmed with build 2003062307 WinXP
Works ok with Netscape 7.02, regression. Adding regression, nsbeta1 and mail4
keywords.
Comment 4•22 years ago
|
||
sspitzer, any cycles to look at this?
Comment 6•22 years ago
|
||
scott, do you think you'll be able to get to this in the next day or two for 1.5
beta?
| Assignee | ||
Comment 7•22 years ago
|
||
isDraft is set to true if we are sending later, saving as draft or saving as
template. In all three cases, we will re-enter this routine whe we are sending
the message for real.
| Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.5beta
| Assignee | ||
Updated•22 years ago
|
Attachment #129468 -
Flags: superreview?(bienvenu)
Comment 8•22 years ago
|
||
Comment on attachment 129468 [details] [diff] [review]
the fix (don't insert undisclosed line if isDraft is true)
sr=bienvenu
Attachment #129468 -
Flags: superreview?(bienvenu) → superreview+
Comment 9•22 years ago
|
||
Comment on attachment 129468 [details] [diff] [review]
the fix (don't insert undisclosed line if isDraft is true)
a=asa (on behalf of drivers) for checkin to 1.5beta.
Attachment #129468 -
Flags: approval1.5b+
| Assignee | ||
Comment 10•22 years ago
|
||
fixed.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•22 years ago
|
Flags: blocking1.5b?
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•