Bug #211031 --> if we are saving as draft/template/send later then don't insert the undisclosed recipients text. We'll do that later when we actually go to send the message.

r/sr=bienvenu
a=asa